;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;                                                                        ;;
;;  This file is part of Frama-C.                                         ;;
;;                                                                        ;;
;;  Copyright (C) 2007-2025                                               ;;
;;    CEA (Commissariat à l'énergie atomique et aux énergies              ;;
;;         alternatives)                                                  ;;
;;                                                                        ;;
;;  you can redistribute it and/or modify it under the terms of the GNU   ;;
;;  Lesser General Public License as published by the Free Software       ;;
;;  Foundation, version 2.1.                                              ;;
;;                                                                        ;;
;;  It is distributed in the hope that it will be useful,                 ;;
;;  but WITHOUT ANY WARRANTY; without even the implied warranty of        ;;
;;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         ;;
;;  GNU Lesser General Public License for more details.                   ;;
;;                                                                        ;;
;;  See the GNU Lesser General Public License version 2.1                 ;;
;;  for more details (enclosed in the file licenses/LGPLv2.1).            ;;
;;                                                                        ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(rule
 (alias frama-c-configure)
 (deps (universe))
 (action
  (progn
   (echo "Region:" %{lib-available:frama-c-region.core} "\n")
   (echo "  - Server:" %{lib-available:frama-c-server.core} "\n")
   (echo "  - UnionFind:" %{lib-available:unionFind} "\n"))))

(env
 (release
  (flags -noassert)))

(library
 (name Region)
 (public_name frama-c-region.core)
 (flags -open Frama_c_kernel :standard -w -9)
 (libraries frama-c.kernel frama-c-server.core unionFind)
 (instrumentation (backend landmarks))
 (instrumentation (backend bisect_ppx)))

(plugin
 (optional)
 (name region)
 (libraries frama-c-region.core)
 (site
  (frama-c plugins)))
